[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Kieran Wynne", email = "keewynne90@gmail.com"},
]
dependencies = [
    "selenium>=4.8.3",
    "loguru>=0.6.0",
    "webdriver-manager>=3.8.5",
]
requires-python = ">=3.11"
license = {text = "MIT"}
